force-app/main/default/objects/MPContractTerminationRecords__c/MPContractTerminationRecords__c.object-meta.xml
<CustomObject>
    <label>FTC</label>
    <nameField>
        <displayFormat>FTC-{0000}</displayFormat>
        <label>FTC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FTC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>