force-app/main/default/objects/MPContractTerminationRecords__c/fields/MPCloseContractTotal__c.field-meta.xml
<CustomField>
    <fullName>MPCloseContractTotal__c</fullName>
    <formula>IF(  ISPICKVAL(MPOrder__r.MPExceptionApproval__c, &apos;Aprobado&apos;),0,MPSubTotalIssuedDebt__c ) +
(IF(  ISPICKVAL(MPOrder__r.MPSpecialConditionInFavorOf__c, &apos;Mallplaza&apos;),-1,1)*MPOrder__r.MPSpecialConditionAmount__c) +
MPSubTotalComercialDebt__c +  MPSubTotalOperationalDebt__c + MPSubTotalAnticipatedConceptsAdjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de terminación de contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>