force-app/main/default/objects/MPContractTerminationRecords__c/fields/MPContractTermAmountsAPIStatus__c.field-meta.xml
<CustomField>
    <fullName>MPContractTermAmountsAPIStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalles API 4.7</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>FTC (Detalles API 4.7)</relationshipLabel>
    <relationshipName>FTC2</relationshipName>
    <type>Lookup</type>
</CustomField>