force-app/main/default/objects/MPContractTerminationRecords__c/fields/MPContractTermAmountsAPISuccessDateTime__c.field-meta.xml
<CustomField>
    <fullName>MPContractTermAmountsAPISuccessDateTime__c</fullName>
    <formula>IF(
ISPICKVAL(MPContractTermAmountsAPIStatus__r.MPStatus__c, &apos;Success&apos;)
,MPContractTermAmountsAPIStatus__r.MPResponseDateTime__c,
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de exito integración 4.7</label>
    <type>DateTime</type>
</CustomField>