force-app/main/default/objects/MPContractTerminationRecords__c/fields/MPOrder__c.field-meta.xml
<CustomField>
    <fullName>MPOrder__c</fullName>
    <label>Orden</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>FTC</relationshipLabel>
    <relationshipName>FTC</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>