force-app/main/default/objects/MPContractTerminationRecords__c/fields/MPRejectContractRescission__c.field-meta.xml
<CustomField>
    <fullName>MPRejectContractRescission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>API Termino Contratos Rechazo 4.9</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>FTC</relationshipLabel>
    <relationshipName>FTC</relationshipName>
    <type>Lookup</type>
</CustomField>