force-app/main/default/objects/MPContractTerminationRecords__c/fields/MPRejectContrRescissionAPISuccessDate__c.field-meta.xml
<CustomField>
    <fullName>MPRejectContrRescissionAPISuccessDate__c</fullName>
    <formula>IF( 
   ISPICKVAL(MPRejectContractRescission__r.MPStatus__c, &apos;Success&apos;)  
   ,MPRejectContractRescission__r.MPResponseDateTime__c,
   null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de exito integración 4.9</label>
    <type>DateTime</type>
</CustomField>