force-app/main/default/objects/MPContractTerminationRecords__c/fields/MPRejectedRecordExist__c.field-meta.xml
<CustomField>
    <fullName>MPRejectedRecordExist__c</fullName>
    <label>Existe un elemento rechazado?</label>
    <summaryFilterItems>
        <field>MPTerminationRecord__c.MPStatus__c</field>
        <operation>equals</operation>
        <value>Rechazado</value>
    </summaryFilterItems>
    <summaryForeignKey>MPTerminationRecord__c.FTC__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>