force-app/main/default/objects/MPContractTerminationRecords__c/fields/MPRejectionReason__c.field-meta.xml
<CustomField>
    <fullName>MPRejectionReason__c</fullName>
    <label>Motivo de Rechazo</label>
    <type>TextArea</type>
</CustomField>