force-app/main/default/objects/MPContractTerminationRecords__c/fields/MPSLACalculatedData__c.field-meta.xml
<CustomField>
    <fullName>MPSLACalculatedData__c</fullName>
    <formula>ROUND( 8 * (
( 5 * FLOOR( ( DATEVALUE( MPContractTermAmountsAPISuccessDateTime__c) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( MPContractTermAmountsAPISuccessDateTime__c ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 8 * ( MOD( MPContractTermAmountsAPISuccessDateTime__c - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 8 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1) ) )
)
)
),
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Datos Calculados (h)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>