force-app/main/default/objects/MPContractTerminationRecords__c/fields/MPStatus__c.field-meta.xml
<CustomField>
    <fullName>MPStatus__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <label>Solicitada</label>
            </value>
            <value>
                <fullName>Received</fullName>
                <label>Recibida</label>
            </value>
            <value>
                <fullName>Socialized</fullName>
                <label>Socializada</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <label>Aceptada</label>
            </value>
            <value>
                <fullName>RejectedByItems</fullName>
                <label>Rechazada por Items</label>
            </value>
            <value>
                <fullName>RejectedByExceptionAndOrSpecialConditionToApply</fullName>
                <label>Rechazada por Excepción y/o Condición Especial por Aplicar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>