force-app/main/default/objects/MPContractTerminationRecords__c/fields/MPSubTotalAnticipatedConceptsAdjustment__c.field-meta.xml
<CustomField>
    <fullName>MPSubTotalAnticipatedConceptsAdjustment__c</fullName>
    <label>Subtotal ajuste conceptos anticipados</label>
    <summarizedField>MPTerminationRecord__c.MPItemValue__c</summarizedField>
    <summaryFilterItems>
        <field>MPTerminationRecord__c.MPCategory__c</field>
        <operation>equals</operation>
        <value>PorEmitir</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>MPTerminationRecord__c.MPSubcategory__c</field>
        <operation>equals</operation>
        <value>AJUSCANT</value>
    </summaryFilterItems>
    <summaryForeignKey>MPTerminationRecord__c.FTC__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>