force-app/main/default/objects/MPContractTerminationRecords__c/fields/MPSubTotalIssuedDebt__c.field-meta.xml
<CustomField>
    <fullName>MPSubTotalIssuedDebt__c</fullName>
    <label>Subtotal deuda emitida</label>
    <summarizedField>MPTerminationRecord__c.MPItemValue__c</summarizedField>
    <summaryFilterItems>
        <field>MPTerminationRecord__c.MPCategory__c</field>
        <operation>equals</operation>
        <value>Emitida</value>
    </summaryFilterItems>
    <summaryForeignKey>MPTerminationRecord__c.FTC__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>