force-app/main/default/objects/MPContractTerminationRecords__c/validationRules/VRF_001_FTCStatusRequested.validationRule-meta.xml
<ValidationRule>
    <fullName>VRF_001_FTCStatusRequested</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( PRIORVALUE(MPStatus__c), &quot;Requested&quot;),
    ISCHANGED(MPStatus__c),
    NOT( ISNEW() ),
    NOT(
        OR(
           $Profile.Name = &apos;System Administrator&apos;,
           $Profile.Name = &apos;Administrador del sistema&apos;,
           $Profile.Name = &apos;Minimum Access - API Only Integrations&apos;
           )
        )
     )</errorConditionFormula>
    <errorMessage>Esta FTC aún no está lista para continuar. Por favor, espere a que se reciban y procesen todos los datos necesarios. (VRF_001)</errorMessage>
</ValidationRule>